--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "emailjs-com": "^2.6.3",
     "react": "^16.13.1",
+    "react-awesome-modal": "^2.0.5",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.6",
     "react-scripts": "3.4.3"
