--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-awesome-modal": "^2.0.5",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-hook-form": "^6.8.6",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "reactjs-popup": "^2.0.4",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
